<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/color_white"
    android:padding="50dp"
    tools:context=".About">

    <TextView
        android:id="@+id/tv_detail_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tentang"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="70dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/color_primary"
        android:layout_marginBottom="30dp"
        android:text="@string/about_app" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/tentang_covid"
        android:src="@drawable/about" />

</LinearLayout>